--- a/package.json
+++ b/package.json
@@ -10,8 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-navigation/bottom-tabs": "^7.1.3",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.1.14",
+    "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "^4.3.0",
+    "react-native-svg": "^15.10.1",
+    "react-native-track-player": "^4.1.1",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.8.2",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
