--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-navigation/bottom-tabs": "^7.1.3",
@@ -24,8 +25,10 @@
     "react-native": "0.76.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-device-info": "^14.0.2",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-permissions": "^5.2.3",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^4.3.0",
@@ -33,6 +36,7 @@
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.8.2",
+    "react-navigation": "^5.0.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
