first working version for lock system

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,6 +105,15 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+    sourceSets {
+        main {
+            res.srcDirs = [
+                'src/main/res',
+                'src/main/res/raw'
+            ]
+            assets.srcDirs = ['src/main/assets']
+        }
+    }
 }
 
 dependencies {
