--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
@@ -28,10 +29,12 @@
     "react-native-device-info": "^14.0.2",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-permissions": "^5.2.3",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^4.3.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.10.1",
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
